--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -45,6 +45,10 @@
   position: relative;
 }
 
+.card-project:hover {
+  transform: scale(1.08); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 .title-project {
   color: var(--blue-200);
 }
