--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,12 @@
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 40px;
   color: var(--white-100);
 }
 
 h4 {
-  font-size: 1em;
+  font-size: 20px;
   color: var(--white-100);
 }
 
