--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -46,7 +46,7 @@
 }
 
 .card-project:hover {
-  transform: scale(1.08); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.05);
 }
 
 .title-project {
