--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,5 @@
 .header-container {
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-cursor-32x32.png), default!important;
   background-color: var(--gray-500);
   height: 36px;
   position: fixed;
@@ -17,8 +18,7 @@
   border: none;
   outline: none;
   padding: 0.5rem 1.5rem;
-  cursor: pointer;
-  border-right: 1.5px solid var(--gray-300);
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important  border-right: 1.5px solid var(--gray-300);
   background-color: var(--gray-500);
   color: var(--gray-100);
   font-size: 14px;
