--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,4 +1,5 @@
 .footer-container {
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-cursor-32x32.png), default!important;
   display: flex;
   background-color: var(--gray-400);
   bottom: 0;
@@ -10,6 +11,10 @@
   border-top: 1px solid var(--gray-300);
   justify-content: center;
   z-index: 2;
+}
+
+.a {
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
 }
 
 .links-footer {
