--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -3,6 +3,12 @@
   flex-direction: column;
   padding-top: 150px;
 }
+
+.a {
+ cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important
+}
+
+
 .title-page-projects {
   font-size: 45px;
 }
