--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -5,7 +5,7 @@
 }
 
 .a {
- cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important
+ cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
 }
 
 
