--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -23,7 +23,8 @@
   border: none;
   outline: none;
   padding: 0.5rem 1.5rem;
-  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important  border-right: 1.5px solid var(--gray-300);
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
+   border-right: 1.5px solid var(--gray-300);
   background-color: var(--gray-500);
   color: var(--gray-100);
   font-size: 14px;
