--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -8,6 +8,10 @@
   font-size: 1.2rem;
 }
 
+.a {
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
+}
+
 .element {
   color: var(--white-100);
   font-size: 1.2rem;
