--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -14,6 +14,10 @@
   cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
 }
 
+.nav-bar .false {
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
+}
+
 
 .nav-container {
   display: flex;
