--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -10,6 +10,10 @@
   z-index: 2;
 }
 
+.a {
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
+}
+
 .explore-title {
   padding: 0.7rem 1rem;
   letter-spacing: 1px;
