--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -39,6 +39,8 @@
   align-items: center;
   justify-content: center;
   color: var(--white-100);
+  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
+
 }
 
 .icon-footer {
