--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -8,6 +8,9 @@
  cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
 }
 
+.svg {
+ cursor: url(https://sweezy-cursors.com/wp-content/uploads/cursor/lava/lava-pointer-32x32.png), pointer!important;
+}
 
 .title-page-projects {
   font-size: 45px;
