--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=La+Belle+Aurore&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
   font-family: 'Fira Code', monospace;
+  margin: 0;
+  padding: 0;
 }
-
-.flex-container {
-  display: flex;
-  min-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  position: relative;
-}
-
-
-
-.main-container {
-  background-color: var(--gray-400);
-  width: calc(100vw - 17.5rem);
-  margin-left: 17.5rem;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-.main-wrapper {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-h1 {
-  color: var(--white-100);
-}
-
 
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
+  align-items: center;
   background-color: var(--gray-500);
-  min-height: 100vh;
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @keyframes App-logo-spin {
@@ -77,35 +40,44 @@ h1 {
   }
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.flex-container {
+  display: flex;
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  position: relative;
+}
+
 .hamburger-menu {
   display: none;
 }
 
 @media screen and (max-width: 1150px) {
-  .main-container {
-    width: 100vw;
-    margin-left: auto;
-  }
-
   .hamburger-menu {
-    cursor: pointer;
-    top: 41px;
-    position: fixed;
-    right: 10px;
     background-color: var(--gray-500);
     border: none;
-    outline: none;
-    height: 30px;
+    cursor: pointer;
     display: block;
+    height: 30px;
+    outline: none;
+    position: fixed;
+    right: 10px;
+    top: 41px;
     z-index: 1000;
   }
-  
-  .line-1 , .line-2 , .line-3 {
-    width: 30px;
-    height: 2px;
+
+  .line-1, .line-2, .line-3 {
     background-color: var(--white-100);
+    height: 2px;
     margin: 7px;
     transition: all 0.3s;
+    width: 30px;
   }
 
   .line-1.active {
@@ -119,4 +91,47 @@ h1 {
   .line-3.active {
     transform: rotate(45deg) translate(-5.5px, -6px);
   }
+}
+
+h1 {
+  color: var(--white-100);
+}
+
+.main-container {
+  background-color: var(--gray-400);
+  margin-left: 17.5rem;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: calc(100vw - 17.5rem);
+}
+
+@media screen and (max-width: 1150px) {
+  .main-container {
+    margin-left: auto;
+    width: 100vw;
+  }
+}
+
+.main-wrapper {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2c2c2c;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #5f5f5f;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #808080;
 }
