--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -1,100 +1,28 @@
-.main-wrapper.projects {
-  justify-content: center;
-  flex-direction: column;
-  padding-top: 150px;
-}
-.title-page-projects {
-  font-size: 45px;
-}
-
-.projects-container1 {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  margin-top: 50px;
-  margin-bottom: 100px;
-  width: min(1200px, 90vw);
-  justify-content: center;
-  min-height: 100vh;
-  max-height: auto;
-}
-
-.img-container {
-  height: 177.75px;
-}
-
-.img-project {
-  object-fit: cover;
-  object-position: center;
-  width: 100%;
-  height: 100%;
+.back-button {
+  border: none;
   border-radius: 5px;
-}
-
-.card-project {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 350px;
-  color: var(--white-100);
-  background-color: var(--gray-500);
-  border-radius: 5px;
-  padding: 1rem;
-  border: 1px solid var(--gray-300);
-  height: 450px;
-  position: relative;
-}
-
-.card-project:hover {
-  transform: scale(1.05);
-}
-
-.title-project {
-  color: var(--blue-200);
-}
-
-.technologies-container {
-  display: flex;
-  gap: 0.4rem;
-  flex-wrap: wrap;
-}
-
-.span-technologies {
-  border-radius: 20px;
-  color: var(--blue-200);
-  background-color: var(--blue-100);
-  font-size: 0.8rem;
-  padding: 0.2rem 0.6rem;
-}
-
-.links-container {
-  position: absolute;
-  display: flex;
-  gap: 1.2rem;
-  right: 1rem;
-  bottom: 1rem;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 5rem;
+  padding: 10px 20px;
 }
 
 .btn-container {
-  margin-top: 1.5rem;
   display: flex;
   gap: 1rem;
   justify-content: center;
+  margin-top: 1.5rem;
 }
 
 .btn-filter {
   background-color: var(--blue-100);
-  color: var(--blue-200);
   border: none;
+  color: var(--blue-200);
   cursor: pointer;
   padding: 0.3rem 0.5rem;
   border-radius: 5px;
   transition: 0.3s;
-}
-
-.btn-filter:hover {
-  background-color: var(--blue-200);
-  color: var(--white-100);
 }
 
 .btn-filter.active {
@@ -102,12 +30,163 @@
   color: var(--white-100);
 }
 
+.btn-filter:hover {
+  background-color: var(--blue-200);
+  color: var(--white-100);
+}
+
+.card-project {
+  background-color: var(--gray-500);
+  border: 1px solid var(--gray-300);
+  border-radius: 5px;
+  color: var(--white-100);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  height: 450px;
+  padding: 1rem;
+  position: relative;
+  width: 350px;
+}
+
+.card-project:hover {
+  transform: scale(1.05);
+}
+
+.game-button {
+  animation: gradient 2s ease infinite;
+  background: linear-gradient(270deg, #00ff6a, #3702f7);
+  background-size: 200% 200%;
+  border: 2px solid rgb(9, 255, 0);
+  border-radius: 5px;
+  color: white; 
+  cursor: pointer;
+  left: 50%;
+  padding: 10px 20px;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.3s;
+  z-index: 2;
+}
+
+.game-button:hover {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.game-container {
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  justify-content: center;
+  margin-bottom: 1rem;
+  position: relative;
+  width: 500px;
+}
+
+.game-image {
+  border-radius: 5px;
+  height: 100%;
+  left: 0;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.img-container {
+  height: 177.75px;
+}
+
+.img-project {
+  border-radius: 5px;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+}
+
+.links-container {
+  bottom: 1rem;
+  display: flex;
+  gap: 1.2rem;
+  position: absolute;
+  right: 1rem;
+}
+
+.main-wrapper.projects {
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 150px;
+}
+
+.projects-container1 {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 100px;
+  margin-top: 50px;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.span-technologies {
+  background-color: var(--blue-100);
+  border-radius: 20px;
+  color: var(--blue-200);
+  font-size: 0.8rem;
+  padding: 0.2rem 0.6rem;
+}
+
+.technologies-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.4rem;
+}
+
+.title-page-projects {
+  font-size: 45px;
+}
+
+.title-project {
+  color: var(--blue-200);
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 @media screen and (max-width: 500px) {
-  .title-page-projects {
-    font-size: 30px;
+  .game-container {
+    height: 200px;
+    width: 100%;
+  }
+
+  .game-image {
+    height: 100%;
+    padding-left: 3%;
+    padding-right: 3%;
+    width: 100%;
   }
 
   .main-wrapper.projects {
     padding-top: 100px;
+  }
+
+  .title-page-projects {
+    font-size: 30px;
   }
 }
